test: add smoke tests and list coverage gaps

--- a/apps/swipe-feed/package.json
+++ b/apps/swipe-feed/package.json
@@ -6,9 +6,15 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "build:strict": "tsc && vite build",
+    "build:strict": "npm run lint:ui-copy && npm run lint:media && npm run lint:copy && tsc && vite build",
     "preview": "vite preview",
-    "type-check": "tsc --noEmit"
+    "type-check": "tsc --noEmit",
+    "lint:ui-copy": "node ../../tools/scripts/check-no-ellipsis.mjs",
+    "lint:media": "node ../../tools/scripts/check-media-dimensions.mjs",
+    "lint:copy": "node ../../tools/scripts/check-copy-style.mjs",
+    "lint": "npm run lint:ui-copy && npm run lint:media && npm run lint:copy && npm run type-check",
+    "test": "vitest run",
+    "test:watch": "vitest"
   },
   "dependencies": {
     "@react-three/drei": "^9.88.0",
@@ -37,13 +43,18 @@
     "@types/react-dom": "^18.3.0",
     "@types/react-router-dom": "^5.3.3",
     "@vitejs/plugin-react": "^5.1.0",
+    "@testing-library/jest-dom": "^6.5.0",
+    "@testing-library/react": "^14.2.2",
+    "@testing-library/user-event": "^14.5.2",
     "autoprefixer": "^10.4.19",
+    "jsdom": "^24.0.0",
     "playwright": "^1.56.1",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.4",
     "tslib": "^2.6.2",
     "typescript": "^5.4.5",
     "vite": "^5.4.11",
-    "vite-plugin-pwa": "^0.17.5"
+    "vite-plugin-pwa": "^0.17.5",
+    "vitest": "^1.6.0"
   }
 }
