--- a/apps/swipe-feed/tsconfig.json
+++ b/apps/swipe-feed/tsconfig.json
@@ -15,7 +15,7 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx",
-    "types": ["vitest/globals", "vite/client"]
+    "types": ["vitest/globals", "vite/client", "google.maps"]
   },
   "include": ["src"],
   "exclude": ["node_modules", "dist"]
