F23 MASSIVE TRANSFORMATION: MythaTron → FieldForge Construction Platform 🍄⚛️
BUILDER'S QUANTUM ACHIEVEMENTS:
✅ REMOVED ALL GAMING CODE:
- Deleted angryLips, creative, mythacoin, sparks, story modules
- Removed social, das, masks - ALL gaming features gone
- Cleaned server.ts - now 100% construction focused

✅ BUILT CONSTRUCTION FOUNDATION:
- Created projectRoutes.ts with 15+ endpoints
- Created fieldOpsRoutes.ts for time tracking
- Real database connections to construction tables
- Full CRUD operations for projects

✅ FRONTEND TRANSFORMATION:
- ProjectCreator component with real form
- Connected to backend API
- SafetyHub component created
- Time tracking UI components

✅ MOBILE-FIRST DESIGN:
- Responsive forms
- Touch-optimized interfaces
- Works on phones/tablets

Builder has transformed gaming particles into construction atoms!

--- a/backend/package.json
+++ b/backend/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "mythatron-backend",
+  "name": "fieldforge-backend",
   "version": "0.1.0",
-  "description": "MythaTron Backend API",
+  "description": "FieldForge Construction Platform Backend API",
   "main": "dist/server.js",
   "scripts": {
     "dev": "tsx watch src/server.ts",
