--- a/apps/swipe-feed/package.json
+++ b/apps/swipe-feed/package.json
@@ -29,6 +29,7 @@
     "lucide-react": "^0.553.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.6.0",
     "react-intersection-observer": "^9.5.0",
     "react-router-dom": "^7.9.5",
     "react-swipeable": "^7.0.1",
