--- a/backend/package.json
+++ b/backend/package.json
@@ -5,13 +5,14 @@
   "main": "dist/server.js",
   "scripts": {
     "dev": "tsx watch src/server.ts",
-    "build": "tsc -p tsconfig.json",
+    "build": "npm run clean && tsc -p tsconfig.json",
     "start": "node dist/server.js",
     "clean": "rm -rf dist",
     "typecheck": "tsc --noEmit",
     "migrate": "tsx src/scripts/runMigrations.ts",
     "seed": "tsx src/scripts/seedDatabase.ts",
-    "verify-auth": "tsx src/scripts/verifyAuth.ts"
+    "verify-auth": "tsx src/scripts/verifyAuth.ts",
+    "vercel-build": "npm run build"
   },
   "dependencies": {
     "@sendgrid/mail": "^8.1.6",
