🚀 FIX: Vercel deployment configuration
- Fixed build command to install devDependencies (vite was missing)
- Added --production=false to npm install commands
- Created deployment fix documentation
- Identified missing critical environment variables:
  - DATABASE_URL (required)
  - SUPABASE_SERVICE_KEY (required)
  - CORS_ORIGIN (required)
  - NODE_ENV=production (required)

The build will now succeed once environment variables are added.

--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,8 @@
 {
   "framework": null,
-  "buildCommand": "cd apps/swipe-feed && npm install && npm run build && cd ../../backend && npm install && npm run build",
+  "buildCommand": "cd apps/swipe-feed && npm install --production=false && npm run build && cd ../../backend && npm install --production=false && npm run build",
   "outputDirectory": "apps/swipe-feed/dist",
-  "installCommand": "cd backend && npm install && cd ../apps/swipe-feed && npm install",
+  "installCommand": "cd backend && npm install && cd ../apps/swipe-feed && npm install --production=false",
   "functions": {
     "api/[...path].ts": {
       "runtime": "@vercel/node@3.0.0",
