💳 Integrate Stripe payment processing (F71)
- Add Stripe Checkout integration for subscription payments
- Create backend routes for payment processing and webhooks
- Implement pricing page with monthly/yearly billing options
- Add payment success confirmation page
- Create billing settings for subscription management
- Configure 3 pricing tiers: Starter (9), Pro (49), Enterprise (99)
- Set up webhook handlers for subscription lifecycle events
- Add comprehensive Stripe setup documentation
- Enable 14-day free trials for all plans
- Support customer portal for self-service management

The mycelial network now processes value exchange 🍄💰

--- a/apps/swipe-feed/package.json
+++ b/apps/swipe-feed/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@react-three/drei": "^9.122.0",
     "@react-three/fiber": "^8.18.0",
+    "@stripe/stripe-js": "^8.4.0",
     "@supabase/supabase-js": "^2.45.4",
     "@types/three": "^0.181.0",
     "ably": "^1.2.42",
