--- a/vercel.json
+++ b/vercel.json
@@ -6,13 +6,14 @@
   "functions": {
     "api/[...path].ts": {
       "maxDuration": 30,
-      "includeFiles": "backend/**"
+      "memory": 1024,
+      "includeFiles": "backend/dist/**"
     }
   },
   "rewrites": [
     {
       "source": "/api/:path*",
-      "destination": "/api/:path*"
+      "destination": "/api/[...path]"
     },
     {
       "source": "/(.*)",
