--- a/apps/swipe-feed/package.json
+++ b/apps/swipe-feed/package.json
@@ -18,6 +18,7 @@
     "test:watch": "vitest"
   },
   "dependencies": {
+    "@daily-co/daily-js": "^0.77.0",
     "@react-three/drei": "^9.122.0",
     "@react-three/fiber": "^8.18.0",
     "@stripe/stripe-js": "^8.4.0",
