--- a/backend/package.json
+++ b/backend/package.json
@@ -27,7 +27,9 @@
     "multer": "^2.0.2",
     "node-fetch": "^3.3.2",
     "pg": "^8.11.3",
+    "resend": "^6.5.0",
     "stripe": "^19.3.1",
+    "twilio": "^5.10.5",
     "uuid": "^9.0.0",
     "zod": "^4.1.12"
   },
