--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "vercel-build": "npm run build"
   },
   "dependencies": {
+    "@anthropic-ai/sdk": "^0.70.0",
     "@sendgrid/mail": "^8.1.6",
     "@supabase/supabase-js": "^2.45.4",
     "@types/multer": "^2.0.0",
@@ -26,6 +27,7 @@
     "express-rate-limit": "^8.2.1",
     "multer": "^2.0.2",
     "node-fetch": "^3.3.2",
+    "openai": "^6.9.1",
     "pg": "^8.11.3",
     "resend": "^6.5.0",
     "stripe": "^19.3.1",
