--- a/backend/package.json
+++ b/backend/package.json
@@ -42,9 +42,10 @@
     "@types/pg": "^8.10.7",
     "@types/uuid": "^9.0.6",
     "tsx": "^4.20.6",
-    "typescript": "^5.2.2"
+    "typescript": "^5.7.2"
   },
   "engines": {
     "node": "22.x"
-  }
+  },
+  "packageManager": "npm@10.9.2"
 }
